--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navbar Section -->
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="" id="navbar__logo">
+      <a href="/" id="navbar__logo">
         <i class="fa-solid fa-gem"></i>VERTTEN
       </a>
       <div class="navbar__toggle" id="mobile-menu">
@@ -46,7 +46,7 @@
         <h2>TECHNOLOGY</h2>
         <p>Aqui nós fazemos a diferença no seu negocio.</p>
         <button class="main__btn">
-          <a href="/">Faça Parte</a>
+          <a href="#Register">Faça Parte</a>
         </button>
       </div>
       <div class="main__img--container">
